# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
log/: pytest_configs.json
src/mrscraper/: __init__.py  exceptions.py  mrscraper.py
tests/: test_client_integration.py
